# javadec-rs

./: .gitignore  Cargo.toml  README.md
javaclass-rs/: Cargo.toml
javaclass-rs/src/: lib.rs
src/: disassembler.rs  lib.rs  main.rs
testdata/: UnicodeTest.java
