[package]
name = "javadec-rs"
version = "0.1.0"
authors = ["Ian Rehwinkel <ian.rehwinkel@tutanota.com>"]
edition = "2018"
keywords = ["java"]
license = "GPL-3.0-or-later"
description = "A java decompiler written in pure rust."
repository = "https://github.com/rehwinkel/javadec-rs"

[workspace]
members = [
    "javaclass-rs"
]

[[bin]]
name = "javadec"
path = "src/main.rs"

[lib]
name = "javadec"
path = "src/lib.rs"

[dependencies]
javaclass-rs = { path = "javaclass-rs/", version = "0.1.0" }
zip = "0.5.5"
clap = "2.33.0"