[package]
name = "javaclass-rs"
description = "A java class file parser written in pure rust."
repository = "https://github.com/rehwinkel/javaclass-rs"
version = "0.1.0"
authors = ["Ian Rehwinkel <ian.rehwinkel@tutanota.com>"]
edition = "2018"
workspace = "../"

[lib]
name = "javaclass"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.105", features = ["derive"] }
